Added links and text to page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,22 @@
     </header>
 
     <main class="container">
-
+        <div class="project">
+            <h1 class="title">Projects</h1>
+            <p>These are the projects that I have currently created as I have gone step by step through The Odin Projects curriculum.</p>
+            <ul>
+                <li class="link"><a href="https://xxxlizzy91xxx.github.io/TOP-Projects/odin-recipes/index.html">Project 1: Recipe Page</a></li>
+                <li class="link"><a href="https://xxxlizzy91xxx.github.io/TOP-Projects/odin-landingpage/index.html">Project 2: Landing Page</a></li>
+                <li class="link"><a href="https://xxxlizzy91xxx.github.io/TOP-Projects/odin-rockpaperscissors/index.html">Project 3: Rock Paper Scissors</a></li>
+                <li class="link"><a href="https://xxxlizzy91xxx.github.io/TOP-Projects/odin-etch-a-sketch/index.html">Project 4: Etch a Sketch</a></li>
+                <li class="link"><a href="https://xxxlizzy91xxx.github.io/TOP-Projects/odin-calculator/index.html">Project 5: Calculator</a></li>
+                <li class="link"><a href="https://xxxlizzy91xxx.github.io/TOP-Projects/odin-signupform/index.html">Project 6: Sign up Form</a></li>
+                <li class="link"><a href="https://xxxlizzy91xxx.github.io/TOP-Projects/odin-admindashboard/index.html">Project 7: Admin Dashboard</a></li>
+                <li class="link"><a href="https://xxxlizzy91xxx.github.io/TOP-Projects/odin-library/index.html">Project 8: Library</a></li>
+                <li class="link"><a href="https://xxxlizzy91xxx.github.io/TOP-Projects/odin-TicTacToe/index.html">Project 9: Tic Tac Toe</a></li>
+                <li class="link"><a href="https://xxxlizzy91xxx.github.io/TOP-Projects/odin-restaurant/index.html">Project 10: Restaurant Website</a></li>
+            </ul>
+        </div>
     </main>
 
     <footer class="foot">
